<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.MainFragment"
    android:background="@color/motard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:id="@+id/launchesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/searchImage"
            android:text="@string/launches"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:letterSpacing="0.05"
            />

            <ImageView
                android:id="@+id/searchImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/search"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_toStartOf="@+id/notificationRel"/>

        <RelativeLayout
            android:id="@+id/notificationRel"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless">

            <ImageView
                android:id="@+id/notificationImage"
                android:layout_width="28dp"
                android:layout_height="22dp"
                android:scaleType="fitXY"
                android:layout_alignParentEnd="true"
                android:paddingEnd="5dp"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/notification"/>

            <RelativeLayout
                android:id="@+id/counterRel"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:background="@drawable/container_counter">

                <TextView
                    android:id="@+id/counterText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="8sp" />

            </RelativeLayout>
        </RelativeLayout>

      <!--  <RelativeLayout
            android:id="@+id/counterRel"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true">

        </RelativeLayout>-->

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearRel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                    <ImageView
                        android:id="@+id/errorImage"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="37dp"
                    android:text="@string/big_launch"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:letterSpacing="0.05"
                    android:fontFamily="@font/lato_bold"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/goldText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/container_yellow"
                        android:paddingStart="11dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="11dp"
                        android:paddingBottom="4dp"
                        android:text="@string/gold"
                        android:fontFamily="@font/lato_bold"
                        android:textColor="@color/white"
                        android:textSize="9sp"
                        android:letterSpacing="0.2"
                        />

                    <TextView
                        android:id="@+id/spaceShipsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/goldText"
                        android:text="@string/space_ships"
                        android:textColor="@color/black"
                        android:textSize="9sp"
                        android:letterSpacing="0.2"
                        android:fontFamily="@font/lato_bold"/>

                </RelativeLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearRel"
                android:layout_marginTop="14dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="90dp"
                    android:background="@color/motard"
                    android:paddingStart="25dp"
                    android:paddingLeft="25dp"
                    android:paddingBottom="45dp">


                    <LinearLayout
                        android:id="@+id/releaseRel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="130dp">

                        <TextView
                            android:id="@+id/number"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/big_launch_number"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:fontFamily="@font/visby_extra_bold"/>

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="match_parent"
                            android:text="@string/big_launch_date"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:layout_below="@+id/number"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/visby_bold"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="110dp"
                        android:text="@string/lorem_ipsum"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:lineSpacingExtra="2dp"
                        android:letterSpacing="0.05"
                        android:fontFamily="@font/lato_regular"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <RelativeLayout
                        android:id="@+id/imageRel"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:background="@drawable/container_corner">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:cardCornerRadius="10dp"
                            android:elevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:src="@drawable/satellite"
                            android:scaleType="fitXY"/>
                        </androidx.cardview.widget.CardView>


                        <RelativeLayout
                            android:id="@+id/infoRel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="105dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:elevation="3dp">


                            <TextView
                                android:id="@+id/engName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:text="@string/by_eng"
                                android:textColor="@color/white"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                android:letterSpacing="0.05"
                                android:fontFamily="@font/lato_regular"/>

                            <TextView
                                android:id="@+id/launchName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/engName"
                                android:text="@string/big_launch_name"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:letterSpacing="0.05"

                                android:fontFamily="@font/lato_bold"/>

                        </RelativeLayout>


                    </RelativeLayout>



                    <RelativeLayout
                        android:id="@+id/circleImageRel"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="160dp"
                        android:background="@drawable/container_counter">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:src="@drawable/eng"/>
                    </RelativeLayout>

                </RelativeLayout>


                <!-- yellow container-->


            </RelativeLayout>
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>